# radiomics-tools

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  TestSet.csv  TrainingSet.csv  build.sh  clean.sh  download_lungx_tcia.py  get_code_cov.sh  install_modules.cmd  install_modules.sh  run.py  setup.py  super-build.sh
DICOMReadAndWrite/: DICOMReadAndWrite.py
DICOMReadAndWrite/SRC/: DICOMReadAndWrite.cxx
FeatureExtraction/: SUVDiffImageFixedWindowMaskImageFeatures.txt  SUVRegisteredFixedWindowMaskImageFeatures.txt  node_FeatureExtraction.m
FeatureExtractionWChoi/SRC/: FeatureExtraction.cxx
GrowCutSegmentation/: CMakeLists.txt  utilities.h
PET2SUV/: Activity2SUV.m  calc_suv_100.m  calc_suv_Philips_100.m  dcm_hhmmss.m
PETCTConverter/: run.py
PETCTConverter/SRC/: CMakeLists.txt  DICOMReadAndWrite.cxx
Tools/: CMakeLists.txt  Makefile
Tools/ContourTools/: CMakeLists.txt  ExtractBoundary.cxx  HoleGenerator.cxx  ROIGenerator.cxx  STAPLEComparison.cxx
Tools/ContourTools/SRC/: CMakeLists.txt  ExtractBoundary.cxx  GTVs2ITV.cxx  ROI2BinImage.cxx  ROICropImage.cxx
Tools/DICOM2NRRDConverter/: DICOM2NRRDConverter.py  Makefile  run_NLSTconverting.py
Tools/DICOM2NRRDConverter/SRC/: CMakeLists.txt  DICOM2NRRDConverter.cxx  DICOM2NRRDConverterHCC.cxx
Tools/DICOM2NRRDConvertor/SRC/: CMakeLists.txt
Tools/DICOMReadAndWrite/: DICOMReadAndWriteNLST.py  run_NLSTconverting.py
Tools/DICOMReadAndWrite/SRC/: CMakeLists.txt  DICOMReadAndWrite.cxx  DICOMReadAndWriteHCC.cxx  DICOMReadAndWriteNLST.cxx
Tools/DICOMTagReader/: Makefile
Tools/DICOMTagReader/SRC/: CMakeLists.txt  DICOMTagReader.cxx
Tools/DICOMTools/: CMakeLists.txt  DICOM-RT2NRRDConverter.cxx  DICOM2NRRDConverter.cxx  DICOM2NRRDConverterHCC.cxx  DICOM2NRRDConverterNLST.cxx  DICOM2NRRDConverterNLST.py  DICOMTagReader.cxx
Tools/DICOMTools/SRC/: CMakeLists.txt
Tools/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cxx  FeatureExtraction.m  FeatureExtractionForVolumeandLengthChange.m  FeatureOrgnazation.m  Features.txt  PreSUVFeatures.txt  PreSUVFixedWindowMaskImageFeatures.txt  RunLengthFeatures.cxx  itkScalarImageToRunLengthFeaturesFilter1.h  itkScalarImageToRunLengthFeaturesFilter1.hxx
Tools/FeatureExtraction/SRC/: CMakeLists.txt  FeatureExtraction.cxx
Tools/GrowCutSegmentation/: CMakeLists.txt  NoduleSegmentation.cxx
Tools/GrowCutSegmentation/SRC/: CMakeLists.txt  FastGrowCutSegmenter.h  FeatureExtraction.cxx  TestSegmentation.cxx  itkFastGrowCutSegmentationImageFilter.h
Tools/HoleGenerator/SRC/: CMakeLists.txt
Tools/ITKUtils/: CMakeLists.txt  FastGrowCutSegmenter.h  FastGrowCutSegmenter.hxx  ITKUtils.cxx  ITKUtils.h  Makefile  itkFastGrowCutSegmentationImageFilter.h  itkFastGrowCutSegmentationImageFilter.hxx  itkGrowCutSegmentationImageFilter.h  itkGrowCutSegmentationImageFilter.hxx  itkMaskedSTAPLEImageFilter.h  itkMaskedSTAPLEImageFilter.hxx  itkMaskedSpatialObjectToImageFilter.h  itkMaskedSpatialObjectToImageFilter.hxx
Tools/ITKUtils/SRC/: CMakeLists.txt  ITKUtils.cxx  ITKUtils.h  fibheap.h  itkFastGrowCutSegmentationImageFilter.hxx  itkMaskedSTAPLEImageFilter.h  itkMaskedSTAPLEImageFilter.hxx  itkMaskedSpatialObjectToImageFilter.hxx
Tools/MatlabTools/Code_InterrunVariation_and_K-variation/: Evaluation Parameters.docx  K_variation.m  Readme.txt  interrunVariation.m
Tools/MatlabTools/NRRD4Matlab/: nrrdread.m  nrrdwrite.m
Tools/PET2SUV/: Activity2SUV.m  calc_suv_100.m  calc_suv_Philips_100.m
Tools/PythonTools/: STAPLE_to_labelmap.py  arithmetic.py  boolean.py  image_resample.py  metadata.py  organize_features.py
Tools/RTConverter/: Makefile
Tools/RTConverter/SRC/: CMakeLists.txt  RTConverter.cxx  itkReadDICOMRT.cxx
Tools/RTConveter/SRC/: CMakeLists.txt  itkMaskedSpatialObjectToImageFilter.h  itkReadDICOMRT.cxx
Tools/RegistrationSITK/: reg_test.py  registration_callbacks.py
Tools/SlicerPythonExtensions/: InterpolateROIsEffect.py  LineProfile.py
qradiomics/: __init__.py
qradiomics/io/: __init__.py  _io.py  dicom.py  metadata.py
qradiomics/model/: feature_selector.py  pca.py  splitter.py  svd.py
qradiomics/util/: __init__.py  arithmetic.py  boolean.py  image_resample.py  organize_features.py
script/: download_lungx_tcia.py  run_lungx.py
