PROJECT (DICOMTools)

SET (EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

FIND_PACKAGE(Boost)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
ELSE(Boost_FOUND)
  MESSAGE(FATAL_ERROR
    "Cannot build Application without Boost. Please set Boost_DIR.")
ENDIF(Boost_FOUND)

INCLUDE_DIRECTORIES(../ITKUtils)

ADD_EXECUTABLE(DICOM2NRRDConverter
    DICOM2NRRDConverter.cxx
)
ADD_EXECUTABLE(DICOM2NRRDConverterHCC
    DICOM2NRRDConverterHCC.cxx
)
ADD_EXECUTABLE(DICOM2NRRDConverterNLST
    DICOM2NRRDConverterNLST.cxx
)
ADD_EXECUTABLE("DICOM-RT2NRRDConverter"
    DICOM-RT2NRRDConverter.cxx
)
ADD_EXECUTABLE("DICOMTagReader"
    DICOMTagReader.cxx
)


SET (BUILD_SHARED_LIBS OFF)
SET (CMAKE_VERBOSE_MAKEFILE OFF)

TARGET_LINK_LIBRARIES(DICOM2NRRDConverter ${ITK_LIBRARIES} ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(DICOM2NRRDConverterHCC ${ITK_LIBRARIES} ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(DICOM2NRRDConverterNLST ${ITK_LIBRARIES} ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(DICOM-RT2NRRDConverter ${ITK_LIBRARIES})
TARGET_LINK_LIBRARIES(DICOMTagReader ${ITK_LIBRARIES})


find_package(codecov)
if(codecov_FOUND)
  add_coverage(DICOM2NRRDConverter)
  add_coverage(DICOM2NRRDConverterHCC)
  add_coverage(DICOM2NRRDConverterNLST)
  add_coverage(DICOM-RT2NRRDConverter)
  add_coverage(DICOMTagReader)
endif()
