PROJECT(itkReadDICOMRT)

# This is needed for testing with ctest
ENABLE_TESTING()

cmake_minimum_required(VERSION 2.6)

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR
"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)


SET(INPUTDATA ${PROJECT_SOURCE_DIR}/testDICOMRT )

SET(CurrentExe "itkReadDICOMRT")
ADD_EXECUTABLE(${CurrentExe} itkReadDICOMRT.cxx) 
TARGET_LINK_LIBRARIES(${CurrentExe} ${ITK_LIBRARIES} ) 

ADD_TEST(ReadDicomStructTest ${CurrentExe} ${INPUTDATA} ${INPUTDATA}/RS.1.2.246.352.71.4.886768594.5257.20090622110825.dcm testRT)

